02Parser/12examplesAntlr/SimpleCalc/SimpleCalcParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.5.2
 *
 *     -  From the grammar source file : SimpleCalc.g
 *     -                            On : 2014-09-17 21:59:55
 *     -                for the parser : SimpleCalcParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "SimpleCalcParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pSimpleCalcParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pSimpleCalcParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pSimpleCalcParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pSimpleCalcParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   SimpleCalcParserTokenNames[7+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "DIGIT",
        (pANTLR3_UINT8) "DIV",
        (pANTLR3_UINT8) "MINUS",
        (pANTLR3_UINT8) "MULT",
        (pANTLR3_UINT8) "NUMBER",
        (pANTLR3_UINT8) "PLUS",
        (pANTLR3_UINT8) "WHITESPACE"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 void
	expr    (pSimpleCalcParser ctx);
static 
 void
	term    (pSimpleCalcParser ctx);
static 
 void
	factor    (pSimpleCalcParser ctx);
static void	SimpleCalcParserFree(pSimpleCalcParser ctx);
static void     SimpleCalcParserReset (pSimpleCalcParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "SimpleCalc.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new SimpleCalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pSimpleCalcParser
SimpleCalcParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return SimpleCalcParserNewSSD(instream, NULL);
}

/** \brief Create a new SimpleCalcParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pSimpleCalcParser
SimpleCalcParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pSimpleCalcParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pSimpleCalcParser) ANTLR3_CALLOC(1, sizeof(SimpleCalcParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in SimpleCalcParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our SimpleCalcParser interface
     */
    ctx->expr	= expr;
    ctx->term	= term;
    ctx->factor	= factor;
    ctx->free			= SimpleCalcParserFree;
    ctx->reset			= SimpleCalcParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */

    /* Install the token table
     */
    PSRSTATE->tokenNames   = SimpleCalcParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
SimpleCalcParserReset (pSimpleCalcParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 SimpleCalcParserFree(pSimpleCalcParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return SimpleCalcParserTokenNames;
}


     
     #include "SimpleCalcLexer.h"
     
     int main(int argc, char * argv[])
     {
        pANTLR3_INPUT_STREAM           input;
        pSimpleCalcLexer               lex;
        pANTLR3_COMMON_TOKEN_STREAM    tokens;
        pSimpleCalcParser              parser;
        input = antlr3FileStreamNew ((pANTLR3_UINT8)argv[1], ANTLR3_ENC_8BIT);
        //input  = antlr3AsciiFileStreamNew          ((pANTLR3_UINT8)argv[1]);
        lex    = SimpleCalcLexerNew                (input);
        tokens = antlr3CommonTokenStreamSourceNew  (ANTLR3_SIZE_HINT, TOKENSOURCE(lex));
        parser = SimpleCalcParserNew               (tokens);
     
        parser  ->expr(parser);
     
        // Must manually clean up
        //
        parser ->free(parser);
        tokens ->free(tokens);
        lex    ->free(lex);
        input  ->close(input);
     
        return 0;
     }
     


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_term_in_expr102  */
static	ANTLR3_BITWORD FOLLOW_term_in_expr102_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000242) };
static  ANTLR3_BITSET_LIST FOLLOW_term_in_expr102	= { FOLLOW_term_in_expr102_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_set_in_expr108  */
static	ANTLR3_BITWORD FOLLOW_set_in_expr108_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000100) };
static  ANTLR3_BITSET_LIST FOLLOW_set_in_expr108	= { FOLLOW_set_in_expr108_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_term_in_expr119  */
static	ANTLR3_BITWORD FOLLOW_term_in_expr119_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000242) };
static  ANTLR3_BITSET_LIST FOLLOW_term_in_expr119	= { FOLLOW_term_in_expr119_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_factor_in_term145  */
static	ANTLR3_BITWORD FOLLOW_factor_in_term145_bits[]	= { ANTLR3_UINT64_LIT(0x00000000000000A2) };
static  ANTLR3_BITSET_LIST FOLLOW_factor_in_term145	= { FOLLOW_factor_in_term145_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_set_in_term149  */
static	ANTLR3_BITWORD FOLLOW_set_in_term149_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000100) };
static  ANTLR3_BITSET_LIST FOLLOW_set_in_term149	= { FOLLOW_set_in_term149_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_factor_in_term162  */
static	ANTLR3_BITWORD FOLLOW_factor_in_term162_bits[]	= { ANTLR3_UINT64_LIT(0x00000000000000A2) };
static  ANTLR3_BITSET_LIST FOLLOW_factor_in_term162	= { FOLLOW_factor_in_term162_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NUMBER_in_factor184  */
static	ANTLR3_BITWORD FOLLOW_NUMBER_in_factor184_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NUMBER_in_factor184	= { FOLLOW_NUMBER_in_factor184_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start expr
 * SimpleCalc.g:51:1: expr : term ( ( PLUS | MINUS ) term )* ;
 */
static void
expr(pSimpleCalcParser ctx)
{
    /* Initialize rule variables
     */

    {
        // SimpleCalc.g:51:9: ( term ( ( PLUS | MINUS ) term )* )
        // SimpleCalc.g:51:11: term ( ( PLUS | MINUS ) term )*
        {
            FOLLOWPUSH(FOLLOW_term_in_expr102);
            term(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleexprEx;
            }


            // SimpleCalc.g:51:18: ( ( PLUS | MINUS ) term )*

            for (;;)
            {
                int alt1=2;
                switch ( LA(1) )
                {
                case MINUS:
                case PLUS:
                	{
                		alt1=1;
                	}
                    break;

                }

                switch (alt1)
                {
            	case 1:
            	    // SimpleCalc.g:51:20: ( PLUS | MINUS ) term
            	    {
            	        if ( LA(1) == MINUS || LA(1) == PLUS )
            	        {
            	            CONSUME();
            	            PERRORRECOVERY=ANTLR3_FALSE;
            	        }
            	        else
            	        {
            	            CONSTRUCTEX();
            	            EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
            	            EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
            	            EXCEPTION->expectingSet = &FOLLOW_set_in_expr108;

            	            RECOVERFROMMISMATCHEDSET(&FOLLOW_set_in_expr108);
            	            goto ruleexprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_term_in_expr119);
            	        term(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop1;	/* break out of the loop */
            	    break;
                }
            }
            loop1: ; /* Jump out to here if this rule does not match */


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleexprEx; /* Prevent compiler warnings */
    ruleexprEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end expr */

/**
 * $ANTLR start term
 * SimpleCalc.g:54:1: term : factor ( ( MULT | DIV ) factor )* ;
 */
static void
term(pSimpleCalcParser ctx)
{
    /* Initialize rule variables
     */

    {
        // SimpleCalc.g:54:9: ( factor ( ( MULT | DIV ) factor )* )
        // SimpleCalc.g:54:11: factor ( ( MULT | DIV ) factor )*
        {
            FOLLOWPUSH(FOLLOW_factor_in_term145);
            factor(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruletermEx;
            }


            // SimpleCalc.g:54:18: ( ( MULT | DIV ) factor )*

            for (;;)
            {
                int alt2=2;
                switch ( LA(1) )
                {
                case DIV:
                case MULT:
                	{
                		alt2=1;
                	}
                    break;

                }

                switch (alt2)
                {
            	case 1:
            	    // SimpleCalc.g:54:20: ( MULT | DIV ) factor
            	    {
            	        if ( LA(1) == DIV || LA(1) == MULT )
            	        {
            	            CONSUME();
            	            PERRORRECOVERY=ANTLR3_FALSE;
            	        }
            	        else
            	        {
            	            CONSTRUCTEX();
            	            EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
            	            EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
            	            EXCEPTION->expectingSet = &FOLLOW_set_in_term149;

            	            RECOVERFROMMISMATCHEDSET(&FOLLOW_set_in_term149);
            	            goto ruletermEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_factor_in_term162);
            	        factor(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruletermEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop2;	/* break out of the loop */
            	    break;
                }
            }
            loop2: ; /* Jump out to here if this rule does not match */


        }

    }

    // This is where rules clean up and exit
    //
    goto ruletermEx; /* Prevent compiler warnings */
    ruletermEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end term */

/**
 * $ANTLR start factor
 * SimpleCalc.g:57:1: factor : NUMBER ;
 */
static void
factor(pSimpleCalcParser ctx)
{
    /* Initialize rule variables
     */

    {
        // SimpleCalc.g:57:9: ( NUMBER )
        // SimpleCalc.g:57:11: NUMBER
        {
             MATCHT(NUMBER, &FOLLOW_NUMBER_in_factor184);
            if  (HASEXCEPTION())
            {
                goto rulefactorEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto rulefactorEx; /* Prevent compiler warnings */
    rulefactorEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end factor */
/* End of parsing rules
 * ==============================================
 */

/* ==============================================
 * Syntactic predicates
 */
/* End of syntactic predicates
 * ==============================================
 */






/* End of code
 * =============================================================================
 */
